@@ -1,17 +1,33 @@
 '''
-Created on Dec 23, 2011
+Created on Feb 1, 2014
 
-@author: ajju
+@author: ajdeveloped@gmail.com
+
+This file is part of XOZE. 
+
+XOZE is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+XOZE is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with XOZE.  If not, see <http://www.gnu.org/licenses/>.
 '''
 from xoze.snapvideo import VideoHost, Video, STREAM_QUAL_SD
 from xoze.utils import http
+import logging
 import re
 
-VIDEO_HOST_NAME = 'Novamov'
+VIDEO_HOST_NAME = 'Nowvideo'
 
 def getVideoHost():
     video_host = VideoHost()
-    video_host.set_icon('http://www.novamov.com/images/logo_novamov.jpg')
+    video_host.set_icon('http://www.nowvideo.ch/images/logo.png')
     video_host.set_name(VIDEO_HOST_NAME)
     return video_host
 
@@ -23,11 +39,12 @@ def retrieveVideoInfo(video_id):
     video.set_id(video_id)
     try:
         http.HttpClient().enable_cookies()
-        video_info_link = 'http://www.novamov.com/video/' + str(video_id)
+        video_info_link = 'http://www.nowvideo.ch/video/' + str(video_id)
+        logging.getLogger().debug(video_info_link)
         html = http.HttpClient().get_html_content(url=video_info_link)
         if re.search(r'Video hosting is expensive. We need you to prove you\'re human.', html):
             html = http.HttpClient().get_html_content(url=video_info_link)
-
+        
         domainStr = re.compile('flashvars.domain="(.+?)"').findall(html)[0]
         fileStr = re.compile('flashvars.file="(.+?)"').findall(html)[0]
         filekey = re.compile('flashvars.filekey="(.+?)"').findall(html)
@@ -37,7 +54,9 @@ def retrieveVideoInfo(video_id):
             filekeyStr = re.compile('var ' + filekeyStr + '="(.+?)"').findall(html)[0]
         else:
             filekeyStr = filekey[0]
+        
         video_info_link = domainStr + '/api/player.api.php?user=undefined&pass=undefined&codes=1&file=' + fileStr + '&key=' + filekeyStr
+        logging.getLogger().debug(video_info_link)
         html = http.HttpClient().get_html_content(url=video_info_link)
         video_link = re.compile(r'url=(.+?)&').findall(html)[0]
         http.HttpClient().disable_cookies()
@@ -47,4 +66,3 @@ def retrieveVideoInfo(video_id):
     except: 
         video.set_stopped(True)
     return video
-
