@@ -7,10 +7,12 @@ from xoze.snapvideo import VideoHost, Video, STREAM_QUAL_SD
 import re
 from xoze.utils import http
 
+VIDEO_HOST_NAME = 'VideoWeed'
+
 def getVideoHost():
     video_host = VideoHost()
     video_host.set_icon('http://www.videoweed.es/images/logo.png')
-    video_host.set_name('VideoWeed')
+    video_host.set_name(VIDEO_HOST_NAME)
     return video_host
 
     
@@ -28,8 +30,13 @@ def retrieveVideoInfo(video_id):
 
         domainStr = re.compile('flashvars.domain="(.+?)"').findall(html)[0]
         fileStr = re.compile('flashvars.file="(.+?)"').findall(html)[0]
-        filekeyStr = re.compile('flashvars.filekey="(.+?)"').findall(html)[0]
-        
+        filekey = re.compile('flashvars.filekey="(.+?)"').findall(html)
+        filekeyStr = None
+        if len(filekey) == 0:
+            filekeyStr = re.compile('flashvars.filekey=(.+?);').findall(html)[0]
+            filekeyStr = re.compile('var ' + filekeyStr + '="(.+?)"').findall(html)[0]
+        else:
+            filekeyStr = filekey[0]
         video_info_link = domainStr + '/api/player.api.php?user=undefined&pass=undefined&codes=1&file=' + fileStr + '&key=' + filekeyStr
         html = http.HttpClient().get_html_content(url=video_info_link)
         video_link = re.compile(r'url=(.+?)&').findall(html)[0]
