@@ -1,3 +1,6 @@
+[B]Version 1.0.2[/B]
+- Added new Snapper for Movzap & modified YouTube Snapper.
+
 [B]Version 1.0.1[/B]
 - Initialize SnapVideo before service layer is enabled.
 - Removed UserAgent and Referer headers from video streams to provide support for external players.
